style: 액션 버튼을 지역 칩 아래로 분리

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <div class="region-chips" id="regionChips">
                         <!-- Region chips will be dynamically inserted here -->
                     </div>
+                    <div class="region-actions" id="regionActions">
+                        <!-- Action buttons will be dynamically inserted here -->
+                    </div>
                 </div>
                 
                 <div class="list-container" id="listContainer">
