밝은/어두운 테마 지원 추가
- 브라우저 설정에 따라 자동으로 테마 선택
- 수동 테마 전환 버튼 추가 (사이드바 헤더)
- 테마에 맞는 지도 타일 변경 (CartoDB light/dark)
- 테마 설정 쿠키에 저장
- CSS 변수를 활용한 테마 시스템

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
                     <span class="logo-icon">📍</span>
                     <h1>Pins in the Map</h1>
                 </div>
-                <button class="sidebar-toggle" id="sidebarToggle" aria-label="Toggle sidebar">
-                    <span class="toggle-icon"></span>
-                </button>
+                <div class="header-controls">
+                    <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                        <span class="theme-icon-light">☀️</span>
+                        <span class="theme-icon-dark">🌙</span>
+                    </button>
+                    <button class="sidebar-toggle" id="sidebarToggle" aria-label="Toggle sidebar">
+                        <span class="toggle-icon"></span>
+                    </button>
+                </div>
             </header>
             
             <div class="sidebar-content">
