대학교 데이터 추가 및 마커 클러스터링 개선
- 대학교 리스트 추가 (data/24.json, scripts/fetch_universities.py)
- 마커 클러스터링: 2개까지는 개별 마커로 표시, 3개 이상만 클러스터링
- 대학교 필터링 개선: 보건실, 강의동, 여행대학, 입시컨설팅, 부속/부설학교, 분수대, 매점, 아트홀, 장학재단, 연습장, 게임장, 실습동 제외

--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
             </header>
             
             <div class="sidebar-content">
-                <p class="sidebar-description">지도를 움직이면 보이는 장소만 표시됩니다</p>
-                
                 <div class="list-container" id="listContainer">
                     <!-- Pin lists will be dynamically inserted here -->
                 </div>
@@ -44,6 +42,9 @@
             <footer class="sidebar-footer">
                 <p>체크박스로 리스트를 표시/숨김</p>
                 <button class="reset-btn" id="resetSettings">⟳ 설정 초기화</button>
+                <p style="margin-top: 12px; font-size: 0.85rem; color: var(--text-muted);">
+                    문의는 <a href="https://github.com/keewon/pins_on_the_map" target="_blank" rel="noopener noreferrer" style="color: var(--text-secondary); text-decoration: underline;">여기</a>로 해주세요
+                </p>
             </footer>
         </aside>
 
